--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "next-intl": "^4.5.8",
+    "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-day-picker": "^9.11.3",
     "react-dom": "19.2.0",
